--- a/content/post/boxplot.Rmd
+++ b/content/post/boxplot.Rmd
@@ -1,10 +1,17 @@
-+++
-  date = 2018-10-01
-  draft = false
-  tags = []
-  title = "Customizing boxplot with ggplot"
-  math = true
-+++
+---
+title: "Customizing boxplot with ggplot"
+author: Thiyanga Talagala
+date: '2018-07-05'
+slug: using-r-to-analyse-the-german-federal-election
+categories: [ggplot2]
+tags: [R, ggplot2]
+---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 
 
 Boxplot is probably one of the most common type of graphics. This will show how to customize boxplot. You will learn,
@@ -21,12 +28,12 @@ Gender <- rep(c("Male", "Female"), times = 3, each = 4)
 Quality <- rep(c("Taste", "Color of package", "Capacity"), times = 1, each = 8)
 Accepted <- seq(0, 100, by = 100/23)
 
-DF <- data.frame(Chemical, Quality, Accepted)
+DF <- data.frame(Gender, Quality, Accepted)
 
 ```
 
 ```{r}
-library(ggplot)
+library(ggplot2)
 ggplot(DF, aes(x = Quality, y = Accepted, fill = Gender)) +
   geom_boxplot() +
   scale_fill_manual(values = c("green", "orange"),
