--- a/content/post/packageinfo.Rmd
+++ b/content/post/packageinfo.Rmd
@@ -3,17 +3,20 @@ title: "What's in a package?"
 author: Thiyanga Talagala
 date: '2018-10-05'
 slug: blog
-categories: [R]
-tags: [R]
+categories: [R, dplyr]
+tags: [R, dplyr]
 ---
 
 Sometimes we need to view all the functions that are built into an R package.
 This is done in the same way you would list variables in your workspace, using the `ls` function. Note that the package must be loaded before you run the `ls` command.
 
-**Usage:** Getting a list of functions inside dplyr package
+**Usage:** Getting a list of functions inside the `dplyr` package
 
 ```{r, warning=FALSE, message=FALSE}
 library(dplyr)
 ls("package:dplyr")
+```
+
+
 
 ```
