add women day message

--- a/content/post/mathsday2020.Rmd
+++ b/content/post/mathsday2020.Rmd
@@ -21,3 +21,5 @@ Australian Mathematical Society
 
 ACEMS: Australian Research Council Centre of Excellence For Mathematical and Statistical Frontiers
 
+Tim Macuga from Australian Research Council Centre of Excellence For Mathematical and Statistical Frontiers
+
