--- a/public/slides/2020s1STA5173_0/l2.Rmd
+++ b/public/slides/2020s1STA5173_0/l2.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "STA 326 2.0 Programming and Data Analysis with R"
+title: "STA 517 3.0 Programming and Statistical Computing with R"
 subtitle: "Lesson 2: Data Structures"
 author: "Dr Thiyanga Talagala"
-date: "2020-02-18"
+date: "2020-08-22"
 output:
   xaringan::moon_reader:
     chakra: libs/remark-latest.min.js
@@ -69,7 +69,7 @@ c(1:5, 5:1)
 
 - Name elements 
 
-```{r}
+```{r, comment=NA}
 a <- c(1:5, 5:1)
 a
 names(a) <- c("a1", "a2", "a3", "a4", "a5", "b1", "b2", "b3", "b4", "b5")
@@ -769,6 +769,6 @@ list("green",12.3)
 ---
 class: center, middle
 
-Slides available at: hellor.netlify.com
+Slides available at: https://thiyanga.netlify.app/courses/rmsc2020/
 
 All rights reserved by [Thiyanga S. Talagala](https://thiyanga.netlify.com/)
