--- a/static/Slides/2020s1STA5173_0/l3.Rmd
+++ b/static/Slides/2020s1STA5173_0/l3.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "STA 326 2.0 Programming and Data Analysis with R"
+title: "STA 517 3.0 Programming and Statistical Computing with R"
 subtitle: "Lesson 3: Functions in R"
 author: "Dr Thiyanga Talagala"
-date: "2020-02-25"
+date: "2020-08-30"
 output:
   xaringan::moon_reader:
     chakra: libs/remark-latest.min.js
@@ -862,7 +862,24 @@ Resourses: You can follow the DataCamp tutorial [here](https://www.datacamp.com/
 
 Use only 1 A4 sheet, you may use both sides.
 
-Assignment due date: 3 March 2020
+Assignment due date: 6 March 2020
+
+---
+
+## Example: lapply()
+
+`lapply(x, FUN)`
+
+input: vector or list
+
+output: list of the same length as input
+
+task: apply FUN function to all elements in the input
+
+```{r, comment=NA, message=FALSE, warning=FALSE}
+lapply(list(c(1, 2, 3), c(10, 20, 30)), mean)
+lapply(c(10, 20, 30), mean)
+```
 
 ---
 
@@ -1136,7 +1153,7 @@ head(iris)
 
 class: center, middle
 
-Slides available at: hellor.netlify.com
+Slides available at: https://thiyanga.netlify.app/courses/rmsc2020/contentr/
 
 All rights reserved by [Thiyanga S. Talagala](https://thiyanga.netlify.com/)
 
